# harmonia

./: .bazelrc  .gitignore  .proof-git-push.txt  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  Readme.md  WORKSPACE  build.rs  install.ps1  install.sh  phoenix.toml  skill.md
.github/workflows/: ci.yml
bazel/: defs.bzl  rust_dynlib.bzl
cli/: broker.rs  chat.rs  cli_args.rs  draft_store.rs  edit_buffer.rs  frontend_pairing.rs  input_history.rs  main.rs  menus.rs  modules.rs  node_link.rs  node_rpc.rs  node_service.rs  pairing.rs  paths.rs  remote.rs  service.rs  session.rs  session_flows.rs  session_ipc.rs  setup.rs  start.rs  status.rs  status_modules.rs  stop.rs  tailscale_local.rs  uninstall.rs  upgrade.rs
cli/broker/: config.rs  mod.rs  runtime.rs
cli/edit_buffer/: mod.rs  tests.rs
cli/frontend_pairing/: catalog.rs  discovery.rs  mod.rs  pairing_flow.rs
cli/node_link/: mod.rs  protocol.rs
cli/node_rpc/: execute.rs  frontend_ops.rs  frontend_verify.rs  fs_ops.rs  helpers.rs  (+5 more)
config/: a2ui-catalog.sexp  baseband.sexp  harmony-policy.sexp  install-config.template.json  matrix-topology.sexp  memory-routing.sexp  model-policy.sexp  parallel-policy.sexp  prompts.sexp  security-patterns.sexp  structure-allowlist.txt  swarm.sexp  tailnet.sexp  tools.sexp  vault-policy.sexp
doc/: CHANGELOG-v0.1.9.md  README.md  hardcoded-prompts-audit.md
lib/backends/http/: BUILD.bazel  Cargo.toml  README.md
lib/backends/http/src/: lib.rs
lib/core/actor-protocol/: BUILD.bazel  Cargo.toml
lib/core/actor-protocol/src/: actor.rs  client.rs  component.rs  frontend.rs  graph_trait.rs  lib.rs  memory_error.rs  message.rs  payload.rs  registration.rs  service.rs  sexp.rs
lib/core/admin-intent/: Cargo.toml
lib/core/admin-intent/src/: lib.rs
lib/core/baseband-channel-protocol/: BUILD.bazel  Cargo.toml
lib/core/baseband-channel-protocol/src/: audit.rs  channel.rs  envelope.rs  lib.rs  peer.rs  routing.rs  security.rs  sexp.rs  transport.rs
lib/core/browser/: BUILD.bazel  Cargo.toml
lib/core/browser/src/: lib.rs
lib/core/chronicle/: BUILD.bazel  Cargo.toml
lib/core/chronicle/src/: dashboard.rs  db.rs  ffi.rs  gc.rs  lib.rs  migrations.rs  query.rs  schema.rs  state.rs
lib/core/chronicle/src/tables/: delegation.rs  error.rs  graph.rs  harmonic.rs  memory.rs  mod.rs  ouroboros.rs  palace.rs  phoenix.rs  signalograd.rs  terraphon.rs
lib/core/config-store/: BUILD.bazel  Cargo.toml  README.md
lib/core/config-store/src/: api.rs  ffi.rs  ingest.rs  legacy.rs  lib.rs  policy.rs  registry.rs  state.rs  store.rs
lib/core/config-store/src/registry/: backends.rs  compat_table.rs  frontends.rs  global_node.rs  runtime.rs
lib/core/cron-scheduler/: BUILD.bazel  Cargo.toml  README.md
lib/core/cron-scheduler/src/: lib.rs
lib/core/fs/: BUILD.bazel  Cargo.toml  README.md
lib/core/fs/src/: lib.rs
lib/core/gateway/: BUILD.bazel  Cargo.toml  README.md
lib/core/gateway/src/: baseband.rs  command_dispatch.rs  envelope.rs  ffi.rs  frontend_ffi.rs  lib.rs  model.rs  payment_auth.rs  polling.rs  registry.rs  sender_policy.rs  sending.rs  session_dispatch.rs  sessions.rs  state.rs  tool_baseband.rs  tool_ffi.rs  tool_registry.rs
lib/core/gateway/src/commands/: mod.rs  native.rs  reference.rs  registry.rs
lib/core/git-ops/: BUILD.bazel  Cargo.toml  README.md
lib/core/git-ops/src/: lib.rs
lib/core/harmonic-matrix/: BUILD.bazel  Cargo.toml  README.md
lib/core/harmonic-matrix/src/: ffi.rs  lib.rs  model.rs  runtime.rs
lib/core/harmonic-matrix/src/runtime/: mod.rs  ops.rs  reports.rs  shared.rs
lib/core/harmonic-matrix/src/runtime/store/: mod.rs  sqlite.rs
lib/core/mcp/: Cargo.toml
lib/core/mcp/src/: lib.rs  peer.rs  protocol.rs  server.rs  state.rs
lib/core/memory/: BUILD.bazel  Cargo.toml  README.md
lib/core/memory-field/: Cargo.toml
lib/core/memory-field/src/: api.rs  attractor.rs  attractor_api.rs  basin.rs  command.rs  config.rs  dream.rs  error.rs  field.rs  graph.rs  interpret.rs  lib.rs  model.rs  recall.rs  scoring.rs  serialize.rs  spectral.rs  topology.rs
lib/core/memory-field/tests/: harmony_tests.rs  integration_tests.rs
lib/core/memory/src/: lib.rs
lib/core/mempalace/: Cargo.toml
lib/core/mempalace/src/: aaak.rs  codebook.rs  command.rs  compress.rs  disk.rs  drawer.rs  graph.rs  interpret.rs  layers.rs  lib.rs  query.rs  sexp.rs
lib/core/mempalace/tests/: integration.rs
lib/core/mqtt-client/: BUILD.bazel  Cargo.toml
lib/core/mqtt-client/src/: lib.rs
lib/core/node-rpc/: Cargo.toml
lib/core/node-rpc/src/: capability.rs  dispatch.rs  lib.rs  request.rs  response.rs
lib/core/observability/: Cargo.toml
lib/core/observability/src/: backend.rs  client.rs  config.rs  context.rs  ffi.rs  lib.rs  model.rs  sender.rs  traceable.rs
lib/core/observability/src/providers/: langsmith.rs  mod.rs  otlp.rs
lib/core/ouroboros/: BUILD.bazel  Cargo.toml  README.md
lib/core/ouroboros/src/: ledger.rs  lib.rs  patch.rs
lib/core/ouroboros/tests/: integration.rs
scripts/: audit-frontends.sh  build_release.sh  check-doc-reference-coverage.sh  check-structure.sh  generate-doc-section-coverage.sh  genesis-loop.lisp  grind-harmonia-hardproof.sh  grind-harmonia-online.sh  grind-harmonia-test.sh  harmonic-genesis-loop.lisp  install.sh  publish-all.sh  resonance-probe-long.lisp  resonance-probe.lisp  run-closed-loop-tests.sh  test-actor-protocol.sh  test-all.sh  test-communication-tools.sh  test-core-live.sh  test-ffi-live.sh  test-frontends-live.py  test-frontends.sh  test-genesis-loop.sh  test-harmonia.sh  test-harmonic-genesis-loop.sh  test-install-config.sh  test-lisp-actors.lisp  test-module-registry.sh  test-mqtt-pgp-tls-local.sh  test-mqtt-remote-config-live.sh  test-mqtt-wallet-derived-tls.sh  test-supervisor.sh  test-terminal-reset.sh  tui-memory-test.py  tui-test-agent.lisp  tui-test-orchestrate.sh  workload-cloud.sh  workload-full.sh  workload-local.sh
service/: com.harmoniis.harmonia.plist  harmonia-freebsd.sh  harmonia.service
tests/: system-audit.py  test-closed-loops.lisp  test-sexp-eval.lisp
(+635 files in other folders)
