# Harmonia lib workspace.
[workspace]
members = [
    # Core — essential infrastructure, agent cannot function without these
    "lib/core/phoenix",
    "lib/core/ouroboros",
    "lib/core/vault",
    "lib/core/memory",
    "lib/core/mqtt-client",
    "lib/core/http",
    "lib/core/s3-sync",
    "lib/core/git-ops",
    "lib/core/rust-forge",
    "lib/core/cron-scheduler",
    "lib/core/push-sns",
    "lib/core/recovery",
    "lib/core/browser",
    "lib/core/fs",
    "lib/core/parallel-agents",
    "lib/core/search-exa",
    "lib/core/search-brave",
    "lib/core/harmonic-matrix",

    # Backends — LLM providers
    "lib/backends/openrouter-backend",

    # Tools — optional plugins
    "lib/tools/pgp-identity",
    "lib/tools/webcash-wallet",
    "lib/tools/whatsapp",
    "lib/tools/telegram",
    "lib/tools/slack",
    "lib/tools/mattermost",
    "lib/tools/nostr",
    "lib/tools/email-client",
    "lib/tools/whisper",
    "lib/tools/elevenlabs",
]
