[workspace]
resolver = "2"
members = [
    # Core — essential infrastructure
    "lib/core/phoenix",
    "lib/core/ouroboros",
    "lib/core/vault",
    "lib/core/memory",
    "lib/core/git-ops",
    "lib/core/rust-forge",
    "lib/core/cron-scheduler",
    "lib/core/recovery",
    "lib/core/fs",
    "lib/core/parallel-agents",
    "lib/core/harmonic-matrix",
    "lib/core/config-store",
    "lib/core/tailnet",
    "lib/core/gateway",
    "lib/core/baseband-channel-protocol",
    "lib/core/signal-integrity",
    "lib/core/signalograd",
    "lib/core/transport-auth",
    "lib/core/payment-auth",
    "lib/core/admin-intent",
    "lib/core/chronicle",
    "lib/core/actor-protocol",
    "lib/core/runtime",
    "lib/core/observability",
    "lib/core/node-rpc",
    "lib/core/qr-terminal",
    "lib/core/complexity-encoder",
    "lib/core/memory-field",

    # Backends — provider protocol + LLM providers + storage + HTTP
    "lib/backends/llms/provider-protocol",
    "lib/backends/llms/provider-router",
    "lib/backends/llms/openrouter",
    "lib/backends/llms/openai",
    "lib/backends/llms/anthropic",
    "lib/backends/llms/xai",
    "lib/backends/llms/google-ai-studio",
    "lib/backends/llms/google-vertex",
    "lib/backends/llms/amazon-bedrock",
    "lib/backends/llms/groq",
    "lib/backends/llms/alibaba",
    "lib/backends/llms/harmoniis",
    "lib/backends/storage/s3",
    "lib/backends/http",

    # Backends — voice providers
    "lib/backends/voice/voice-protocol",
    "lib/backends/voice/whisper",
    "lib/backends/voice/elevenlabs",
    "lib/backends/voice/voice-router",

    # Core — tool channel protocol
    "lib/core/tool-channel-protocol",

    # Tools — utility plugins
    "lib/tools/browser",
    "lib/tools/search-exa",
    "lib/tools/search-brave",
    "lib/tools/hfetch",
    "lib/tools/zoom",

    # Frontends — hot-pluggable communication channels
    "lib/frontends/push",
    "lib/frontends/mqtt-client",
    "lib/frontends/http2-mtls",
    "lib/frontends/whatsapp",
    "lib/frontends/telegram",
    "lib/frontends/slack",
    "lib/frontends/discord",
    "lib/frontends/signal",
    "lib/frontends/mattermost",
    "lib/frontends/nostr",
    "lib/frontends/email-client",
    "lib/frontends/tui",
    "lib/frontends/imessage",
    "lib/frontends/tailscale",
]

[workspace.package]
edition = "2021"
license = "LicenseRef-HCL-1.0"
repository = "https://github.com/harmoniis/harmonia"
homepage = "https://harmoniis.com"
authors = ["Harmoniis <dev@harmoniis.com>"]

[package]
name = "harmonia"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Self-improving Common Lisp + Rust agent"
keywords = ["ai", "agent", "lisp", "self-improving"]
categories = ["command-line-utilities"]
default-run = "harmonia"

[[bin]]
name = "harmonia"
path = "cli/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3.4"
crossterm = "0.28"
unicode-width = "0.2"
ureq = { version = "2", features = ["json"] }
rmqtt = { version = "0.18.1", features = ["tls"] }
base64 = "0.22"
snow = "0.10"
tailscale-localapi = "0.5"
harmonia-vault = { version = "0.1.9", path = "lib/core/vault" }
harmonia-config-store = { version = "0.1.9", path = "lib/core/config-store" }
harmonia-transport-auth = { version = "0.1.9", path = "lib/core/transport-auth" }
harmonia-tailnet = { version = "0.1.9", path = "lib/core/tailnet" }
harmonia-node-rpc = { version = "0.1.9", path = "lib/core/node-rpc" }
harmonia-qr-terminal = { version = "0.1.9", path = "lib/core/qr-terminal" }
harmonia-whatsapp = { version = "0.1.9", path = "lib/frontends/whatsapp" }
harmonia-signal = { version = "0.1.1", path = "lib/frontends/signal" }
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "time"] }
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Build profiles ───────────────────────────────────────────────────

[profile.release]
# Security: abort on panic (no unwinding attack surface, smaller binary)
panic = "abort"
# Security: detect integer overflow in release builds
overflow-checks = true
# Performance: link-time optimization across all crates
lto = "thin"
# Performance: single codegen unit for maximum optimization
codegen-units = 1
# Strip debug info from release binaries
strip = "symbols"

[profile.bench]
# Benchmarks need accurate timing — use release optimizations
inherits = "release"
# But keep debug info for profiling
strip = false
debug = true
