[package]
name = "harmonia-http"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP client with vault-based authentication for the Harmonia agent"
keywords = ["harmonia", "http"]
categories = ["web-programming::http-client"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
harmonia-vault = { version = "0.1.4", path = "../../core/vault" }
