[package]
name = "harmonia-http"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP client with vault-based authentication for the Harmonia agent"
keywords = ["harmonia", "http"]
categories = ["web-programming::http-client"]

[lib]

[dependencies]
harmonia-vault = { version = "0.1.9", path = "../../core/vault" }
