[package]
name = "harmonia-actor-protocol"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Unified actor protocol types and registry for the Harmonia agent"
keywords = ["harmonia", "actor"]
categories = ["concurrency"]

[lib]
crate-type = ["cdylib", "rlib"]
