load("@rules_rust//rust:defs.bzl", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "baseband-channel-protocol",
    crate_name = "harmonia_baseband_channel_protocol",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    deps = [
        "@crate_index//:serde",
        "@crate_index//:serde_json",
    ],
)
