[package]
name = "harmonia-baseband-channel-protocol"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared Baseband Channel Protocol types for Harmonia"
keywords = ["harmonia", "baseband", "protocol"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
