[package]
name = "harmonia-chronicle"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Graph-native knowledge base with time-series observability for the Harmonia agent"
keywords = ["harmonia", "observability", "graph", "knowledge-base"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
harmonia-config-store = { version = "0.1.7", path = "../config-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1"
