[package]
name = "harmonia-chronicle"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Graph-native knowledge base with time-series observability for the Harmonia agent"
keywords = ["harmonia", "observability", "graph", "knowledge-base"]
categories = ["database"]

[lib]

[dependencies]
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
harmonia-actor-protocol = { version = "0.1.9", path = "../actor-protocol" }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
