load("@rules_rust//rust:defs.bzl", "rust_library", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "config-store",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@crate_index//:rusqlite",
    ],
)

rust_shared_library(
    name = "config-store-so",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@crate_index//:rusqlite",
    ],
)
