load("@rules_rust//rust:defs.bzl", "rust_library", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "fs",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
)

rust_shared_library(
    name = "fs-so",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
)
