[package]
name = "harmonia-fs"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Filesystem operations for the Harmonia agent"
keywords = ["harmonia", "filesystem"]
categories = ["filesystem"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
