[package]
name = "harmonia-gateway"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Hot-pluggable frontend gateway with dynamic library loading"
keywords = ["harmonia", "gateway"]
categories = ["network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libloading = "0.8"
log = "0.4"
parking_lot = "0.12"
harmonia-baseband-channel-protocol = { version = "0.1.9", path = "../baseband-channel-protocol" }
harmonia-payment-auth = { version = "0.1.9", path = "../payment-auth" }
harmonia-signal-integrity = { version = "0.1.9", path = "../signal-integrity" }
harmonia-actor-protocol = { version = "0.1.9", path = "../actor-protocol" }
harmonia-tool-channel-protocol = { version = "0.1.9", path = "../tool-channel-protocol" }
harmonia-vault = { version = "0.1.9", path = "../vault" }
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
harmonia-node-rpc = { version = "0.1.9", path = "../node-rpc" }
serde_json = "1"
