[package]
name = "harmonia-gateway"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Frontend gateway with actor-based dispatch"
keywords = ["harmonia", "gateway"]
categories = ["network-programming"]

[lib]

[dependencies]
log = "0.4"
parking_lot = "0.12"
harmonia-baseband-channel-protocol = { version = "0.1.9", path = "../baseband-channel-protocol" }
harmonia-payment-auth = { version = "0.1.9", path = "../payment-auth" }
harmonia-signal-integrity = { version = "0.1.9", path = "../signal-integrity" }
harmonia-tool-channel-protocol = { version = "0.1.9", path = "../tool-channel-protocol" }
harmonia-vault = { version = "0.1.9", path = "../vault" }
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
harmonia-complexity-encoder = { version = "0.1.0", path = "../complexity-encoder" }
harmonia-node-rpc = { version = "0.1.9", path = "../node-rpc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
