[package]
name = "harmonia-git-ops"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Git operations for self-modification in the Harmonia agent"
keywords = ["harmonia", "git"]
categories = ["development-tools"]

[lib]

[dependencies]
# Add as needed: git2, etc.