[package]
name = "harmonia-harmonic-matrix"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Topology routing and harmony scoring for the Harmonia agent"
keywords = ["harmonia", "routing"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
