[package]
name = "harmonia-harmonic-matrix"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Topology routing and harmony scoring for the Harmonia agent"
keywords = ["harmonia", "routing"]
categories = ["algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
harmonia-config-store = { version = "0.2.0", path = "../config-store" }
rusqlite = { version = "0.31", features = ["bundled"] }
