[package]
name = "harmonia-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) A2A client/server for Harmonia"
keywords = ["harmonia", "mcp", "a2a"]

[dependencies]
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
harmonia-actor-protocol = { version = "0.1.9", path = "../actor-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
