[package]
name = "harmonia-memory-field"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Graph Laplacian field propagation engine for dynamical memory recall"
keywords = ["harmonia", "memory", "field", "attractor"]
categories = ["science"]

[lib]

[dependencies]
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
