load("@rules_rust//rust:defs.bzl", "rust_library", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "memory",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
)

rust_shared_library(
    name = "memory-so",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
)
