[package]
name = "harmonia-memory"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Long-term memory store with vector compression for the Harmonia agent"
keywords = ["harmonia", "memory"]
categories = ["database"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
