[package]
name = "harmonia-mempalace"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Graph-structured knowledge palace with AAAK compression for verbatim recall"
keywords = ["harmonia", "memory", "knowledge-graph", "aaak"]
categories = ["data-structures"]

[lib]

[dependencies]
harmonia-actor-protocol = { version = "0.1.9", path = "../actor-protocol" }
harmonia-config-store = { version = "0.1.9", path = "../config-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
