[package]
name = "harmonia-node-rpc"
version = "0.1.8"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Typed node RPC protocol for cross-node session and control operations"
keywords = ["harmonia", "rpc", "node"]
categories = ["network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
