[package]
name = "harmonia-ouroboros"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Self-improvement and code rewriting engine for the Harmonia agent"
keywords = ["harmonia", "self-improvement"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
